# currate

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  api.py  app.py  pyproject.toml
frontend/: Dockerfile  elm.json  index.html  style.css
frontend/design/: double_arrow.afdesign  logo.afdesign
frontend/src/: About.elm  Home.elm  Main.elm
