[tool.poetry]
name = "currate-backend"
version = "0.1.0"
description = ""
authors = ["Theo Danneels <danneels.theo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.24.0"
glom = "^20.5.0"
cachetools = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
